--- a/template/core/contact.html
+++ b/template/core/contact.html
@@ -30,7 +30,7 @@
                         <a href="#" class="icono icon-mail mail"></a>
                     </div>
                     <div class="col-12 col-lg-3 col-md-3">
-                        <p class="text-center">Jos_Guzman_Villegas@outlook.com</p>
+                        <p class="text-center">Jose_Guzman_Villegas@outlook.com</p>
                     </div>
                 </div>
 
