--- a/template/core/about.html
+++ b/template/core/about.html
@@ -22,6 +22,12 @@
                         <hr>
                         <p class="text-center">Jose Villegas</p>
                         <hr>
+                        <ul class="wrapper">
+                            <li class="icon facebook">
+                                <span class="tooltip">Facebook</span>
+                                <span><i class="fab fa-facebook-f"></i></span>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-12 col-lg-9 col-md-9">
                         <p>Soy un estudiante de ingeniería en informática que desarrolló el gusto
