--- a/template/core/contact.html
+++ b/template/core/contact.html
@@ -42,6 +42,26 @@
                         <p class="text-center">+52 476 146 0365
                         </p>
                     </div>
+                     <div class="container2">
+        <a class="link linkedin">
+            <i class="fab fa-2x fa-linkedin"></i>
+        </a>
+        <a class="link twitter">
+            <i class="fab fa-2x fa-twitter"></i>
+        </a>
+        <a class="link github">
+            <i class="fab fa-2x fa-github"></i>
+        </a>
+        <a class="link instagram">
+            <i class="fab fa-2x fa-instagram"></i>
+        </a>
+        <a class="link youtube">
+            <i class="fab fa-2x fa-youtube"></i>
+        </a>
+        <a class="link facebook">
+            <i class="fab fa-2x fa-facebook-f"></i>
+        </a>
+    </div>
                 </div>
             </div>
         </div>
