--- a/template/core/portfolio.html
+++ b/template/core/portfolio.html
@@ -45,7 +45,7 @@
                 <div class="row projects justify-content-center">
                     <div class="content-project col-12 col-lg-4 col-md-4">
                         <a href="" data-toggle="modal" data-target="#modal">
-                            <img src="{% static 'core/img/logo1.png' %}" class="img-fluid" alt="...">
+                            <img src="{% static 'core/img/logo1.png' %}" class="img-fluid" alt="">
 
                         </a>
                     </div>
@@ -66,6 +66,17 @@
                         <h6 class="title-project">Actividades Realizadas</h6>
                         <p>realizar pruebas unitarias en SIT y UAT, desarrollo en COBOL 74, metodología 
                         SDLC, manejo de herramienta como workbench y web enable</p>
+                    </div>
+                    <div class="content-project col-12 col-lg-4 col-md-4">
+                        <a href="" data-toggle="modal" data-target="#modal">
+                            <img src="{% static 'core/img/evangelium.png' %}" class="img-fluid" alt="...">
+                        </a>
+                    </div>
+                    <div class="content-project col-12 col-lg-8 col-md-8">
+                        <h5 class="title-project">E-vangelium</h5>
+                        <h6 class="title-project">Actividades Realizadas</h6>
+                        <p>Análisis y solución de Errores, Desarrollo front End, Desarrollo Back End en python, Desarrollo de APIS, Documentación de Proyectos, Desarrollo de pruebas automatizadas
+                            , Análisis de requerimientos, Análisis y desarrollo de tareas de alto nivel, Análisis y desarrollo de tareas técnicas</p>
                     </div>
 
                     <!-- Ventana Modal -->
