--- a/template/core/base.html
+++ b/template/core/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'core/css/fontello.css' %}">
+    <script src="{% static 'fontawesomepro/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'core/css/styles.css' %}">
 
 </head>
@@ -58,8 +59,7 @@
     <footer>
         <div class="container">
             <div class="row redes-sociales justify-content-center">
-
-                <div class="col-12 text-center copyright">
+                <div class="col-12 text-center" style="color:#ffffff;">
                     <samp>
 						<p>Jose Villegas (Desarrollador BackEnd) </p>
 					</samp>
