--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -250,21 +250,12 @@ header .menu .c-3:hover {
 
 /*---botones redes ---*/
 
-.container2 {
-    background-color: green;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .link {
     height: 70px;
     width: 70px;
-    background-color: #caf7e3;
     border-radius: 35px;
     text-align: center;
-    margin: 7px;
+    margin: 2rem;
     line-height: 80px;
 }
 
@@ -274,22 +265,6 @@ a i {
 
 a:hover i {
     transform: scale(1.5);
-}
-
-.youtube:hover {
-    color: red;
-}
-
-.facebook:hover {
-    color: blue;
-}
-
-.instagram:hover {
-    color: #e11d74;
-}
-
-.twitter:hover {
-    color: #00adb5;
 }
 
 .github:hover {
