--- a/template/core/about.html
+++ b/template/core/about.html
@@ -22,12 +22,14 @@
                         <hr>
                         <p class="text-center">Jose Villegas</p>
                         <hr>
-                        <ul class="wrapper">
-                            <li class="icon facebook">
-                                <span class="tooltip">Facebook</span>
-                                <span><i class="fab fa-facebook-f"></i></span>
-                            </li>
-                        </ul>
+                        <div class="col-auto" >
+                            <a href="https://www.linkedin.com/in/jose-villegas-454461216/" target="blank" class="link linkedin">
+                                <i class="fab fa-2x fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/CubiRubick" target="blank" class="link github">
+                                <i class="fab fa-2x fa-github"></i>
+                            </a>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-9 col-md-9">
                         <p>Soy un estudiante de ingeniería en informática que desarrolló el gusto
@@ -102,7 +104,7 @@
                     </div>
                     <div class="col-12 col-lg-9 col-md-9">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                     </div>
                 </div>
