add tittle in about page

--- a/template/core/about.html
+++ b/template/core/about.html
@@ -41,7 +41,7 @@
                             equipo.
 
                         </p>
-                        <h5 class="title-project">Estudios</h5>
+                        <h5 class="title-project">Universidad</h5>
                         <p>
                         Instituto: Instituto Tecnológico Superior de Purísima del Rincón
                         <hr>
@@ -50,6 +50,7 @@
                         trabajo.
                         </p>
                         <hr>
+                        <h5 class="title-project">Preparatoria</h5>
                         <p>
                         Instituto: Colegio de Estudios Cientificos y Tecnológicos del Estado de Guanajuato plantel Purísima
                         <hr>
