--- a/template/core/about.html
+++ b/template/core/about.html
@@ -36,7 +36,7 @@
                             por la programación, que se esforzo por aprender buscando y realizando cursos de 
                             distintos lenguajes, metodos, frameworks y asi estar siempre en constante actualizacion de mis conocimientos.
                             <p>
-                            uno de mis principales gusto es el trabajar en equipo al momento de realizar cualquier proyecto 
+                            Uno de mis principales gusto es el trabajar en equipo al momento de realizar cualquier proyecto 
                             ya que los grandes logros se alcanzan fácilmente con un espíritu de
                             equipo.
 
@@ -45,7 +45,7 @@
                         <p>
                         Instituto: Instituto Tecnológico Superior de Purísima del Rincón
                         <hr>
-                        principales logros: seleccionado para certificación de java, tutor de programación en java, participar en ENEIT ed.
+                        Principales logros: seleccionado para certificación de java, tutor de programación en java, participar en ENEIT ed.
                         2018, concursos de programación, participar en Coding Cup Ed. 2019, liderar equipos de
                         trabajo.
                         </p>
@@ -54,7 +54,7 @@
                         <p>
                         Instituto: Colegio de Estudios Cientificos y Tecnológicos del Estado de Guanajuato plantel Purísima
                         <hr>
-                        principales logros: Pertenecer al equipo de ajedrez, participar en concursos de ajedrez en representación de la
+                        Principales logros: Pertenecer al equipo de ajedrez, participar en concursos de ajedrez en representación de la
                         escuela.
 
                         </p>
